k3s-userapps/cloudflared/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-cloudflare-tunnel-remote
  namespace: cloudflared
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/pod: cloudflared
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: cloudflared
    spec:
      containers:
        - command:
            - cloudflared
            - tunnel
            - '--no-autoupdate'
            - '--metrics'
            - '0.0.0.0:2000'
            - run
          ports:
            - containerPort: 2000
              name: http
              protocol: TCP
          image: 'cloudflare/cloudflared:2026.5.2'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 1
            httpGet:
              path: /ready
              port: 2000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ready
              port: 2000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          name: cloudflared
      serviceAccount: cloudflared-cloudflare-tunnel-remote
