k3s-userapps/cloudflared/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-metrics
  namespace: cloudflared
  labels:
    app.kubernetes.io/pod: cloudflared
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 2000
  selector:
    app.kubernetes.io/pod: cloudflared
  type: ClusterIP
